Sequencer: crash transforming strips with overwrite enabled #91096

Closed
opened 2021-09-01 01:15:45 +02:00 by Campbell Barton · 7 comments

Transforming sequences strips with the overwrite option enabled can crash.

Tested with 838b6ec48af6fb767089784193d8525c5f5faf13 (3.0 master).

With this file, in the sequencer view press:

  • G key.
  • Type in 654.
  • Press Enter to confirm.

... if this doesn't crash, press Ctrl-Z and repeat the steps above.

ASAN reports use-after free.

sequencer_overwrite_crash_with_handle.blend

Transforming sequences strips with the overwrite option enabled can crash. Tested with `838b6ec48af6fb767089784193d8525c5f5faf13` (3.0 master). With this file, in the sequencer view press: - `G` key. - Type in `654`. - Press Enter to confirm. ... if this doesn't crash, press Ctrl-Z and repeat the steps above. ASAN reports use-after free. [sequencer_overwrite_crash_with_handle.blend](https://archive.blender.org/developer/F10359142/sequencer_overwrite_crash_with_handle.blend)
Richard Antalik was assigned by Campbell Barton 2021-09-01 01:15:45 +02:00
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Campbell Barton changed title from Crash transforming sequence strips with overwrite enabled to Sequencer: crash transforming strips with overwrite enabled 2021-09-01 01:56:53 +02:00

This is probably cause of different resuls for #91098. Does ASAN give some details like stack trace? AFAIK ASAN is still not functional on windows.

This is probably cause of different resuls for `#91098`. Does ASAN give some details like stack trace? AFAIK ASAN is still not functional on windows.
Author
Owner

Not sure if it's related to #91098 or not, as ASAN would likely crash on bad memory access there too.


Ah, thought ASAN worked everywhere, asan.txt

Recommend spending time to setup ASAN, even on a VM or WSL on Windows, it can help a lot with these kinds of bugs. When enabled during development, they can be caught early.

Not sure if it's related to `#91098` or not, as ASAN would likely crash on bad memory access there too. ---- Ah, thought ASAN worked everywhere, [asan.txt](https://archive.blender.org/developer/F10359328/asan.txt) *Recommend spending time to setup ASAN, even on a VM or WSL on Windows, it can help a lot with these kinds of bugs. When enabled during development, they can be caught early.*

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Thanks for trace. I wanted to switch to Linux due to reasons like these, but I was discouraged, because we need windows developers. As I know myself I wouldn't maintain 2 platforms well and develop only on 1 of them anyway...

I see the issue though - caused by using SEQ_edit_remove_flagged_sequences in 2 areas at the same time. Should be relatively easy to fix on transform side. Not sure if I will be able to eliminate need for SEQ_FLAG_DELETE in SEQ_edit_strip_split. I tried once and failed, but now function is guaranteed to never delete any original strips, it can only create new strips, so perhaps I can do it now.

Thanks for trace. I wanted to switch to Linux due to reasons like these, but I was discouraged, because we need windows developers. As I know myself I wouldn't maintain 2 platforms well and develop only on 1 of them anyway... I see the issue though - caused by using `SEQ_edit_remove_flagged_sequences` in 2 areas at the same time. Should be relatively easy to fix on transform side. Not sure if I will be able to eliminate need for `SEQ_FLAG_DELETE` in `SEQ_edit_strip_split`. I tried once and failed, but now function is guaranteed to never delete any original strips, it can only create new strips, so perhaps I can do it now.

This issue was referenced by 2561145da8

This issue was referenced by 2561145da8d1e6db6617fa67c5a306d6e07e34e5

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91096
No description provided.